syntax = "proto3";

option go_package="github.com/Kiyosh31/ms-ecommerce/user-service/cmd/userPb";

package userPb;

service UserService {
  rpc CreateUser(UserRequest) returns (UserResponse);
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc UpdateUser(UserRequest) returns (UserResponse);
  rpc DeactivateUser(UserRequest) returns (UserResponse);
  rpc ReactivateUser(CredentialsUserRequest) returns(UserResponse);
  rpc LoginUser(CredentialsUserRequest) returns(TokenResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated Address addresses = 5;
  repeated string orders = 6;
  bool isActive = 7;
}

message Address {
  string id = 1;
  string name = 2;
  string street = 3;
  string city = 4;
  string state = 5;
  string country = 6;
  int64 zipCode = 7;
}

message UserRequest {
  optional string userId = 1;
  optional User user = 2;
}

message CredentialsUserRequest {
  string email = 1;
  string password = 2;
}

message TokenResponse {
  string token = 1;
}

message UserResponse {
  string message = 1;
  User user = 2;
  TokenResponse token = 3;
}