syntax = "proto3";

option go_package="github.com/Kiyosh31/ms-ecommerce/user-service/userPb";

package userPb;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (Response);
  rpc GetUser(GetUserRequest) returns (Response);
  rpc UpdateUser(UpdateUserRequest) returns (Response);
  rpc DeleteUser(DeleteUserRequest) returns (Response);
  rpc ReactivateUser(ReactivarUserRequest) returns(Response);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated Address addresses = 5;
  repeated string orders = 6;
  bool isActive = 7;
}

message Address {
  string id = 1;
  string name = 2;
  string street = 3;
  string city = 4;
  string state = 5;
  string country = 6;
  int64 zipCode = 7;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  string userId = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  string userId = 1;
}

message ReactivarUserRequest {
  string email = 1;
  string password = 2;
}

message Response {
  string message = 1;
  User user = 2;
}